03-qa/evidence/run-B/tc009-retrieve/objects/VS_Facility_Service__c/VS_Facility_Service__c.object-meta.xml
<CustomObject>
    <description>F-001 slot-booking-core (VS-01, EP-01). Junction recording which VS_Service__c a VS_Facility__c offers (REQ-010). OWD is ControlledByParent (inherits Facility&apos;s Public Read Only, design §2.2). Retention class (Annexure C4): permanent reference — never purged by VS_RetentionPurgeBatch.</description>
    <label>VS Facility Service</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Facility Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VS Facility Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>