03-qa/evidence/run-B/tc009-retrieve/objects/VS_Facility_Service__c/fields/VS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>VS_External_Id__c</fullName>
    <description>Composite facility+service uniqueness key (design §2.3: &quot;Composite uniqueness (facility+service) via VS_External_Id__c (Unique)&quot;). Populated on CREATE by the before-save record-triggered flow VS_FacilityService_BeforeSave_SetExternalId (VS_Facility__c &amp; &quot;-&quot; &amp; VS_Service__c), which runs before this field&apos;s Unique constraint is evaluated, so a duplicate facility+service pairing is genuinely rejected at save (VS-01 AC-3). This is a plain Text field — NOT a formula field (formula fields cannot be marked externalId/unique, and default values cannot reference sibling fields on the same record; both were corrected after VS-01 review caught this as a deploy-blocking defect).</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>