03-qa/evidence/run-B/tc009-retrieve/objects/VS_Facility_Service__c/fields/VS_Facility__c.field-meta.xml
<CustomField>
    <fullName>VS_Facility__c</fullName>
    <description>Master-Detail to VS_Facility__c: the facility offering the related service. Master-Detail (not Lookup) because a facility-service offering is meaningless without its facility and inherits Facility&apos;s sharing (design §2.4).</description>
    <label>Facility</label>
    <referenceTo>VS_Facility__c</referenceTo>
    <relationshipLabel>Facility Services</relationshipLabel>
    <relationshipName>VS_Facility_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>