03-qa/evidence/run-B/tc009-retrieve/objects/VS_Facility_Service__c/fields/VS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>VS_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this facility no longer offers this service in citizen discovery search, without deleting the historical offering record.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>