03-qa/evidence/run-B/tc009-retrieve/objects/VS_Facility_Service__c/fields/VS_Service__c.field-meta.xml
<CustomField>
    <fullName>VS_Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup (not Master-Detail) to VS_Service__c — the service is a shared catalogue row referenced by many facilities and must not cascade-delete with any one facility-service offering (design §2.4).</description>
    <label>Service</label>
    <referenceTo>VS_Service__c</referenceTo>
    <relationshipLabel>Facility Services</relationshipLabel>
    <relationshipName>VS_Facility_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>